--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^7.0.0",
     "@mui/material": "^7.0.0",
+    "@mui/x-tree-view": "^7.28.1",
     "@reduxjs/toolkit": "^2.6.1",
     "@tailwindcss/vite": "^4.0.15",
     "axios": "^1.8.4",
+    "dayjs": "^1.11.13",
+    "framer-motion": "^12.6.3",
     "i18next": "^24.2.3",
     "prop-types": "^15.8.1",
     "react": "^19.0.0",
