--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^7.0.0",
-    "@mui/material": "^7.0.0",
+    "@mui/material": "^7.0.2",
+    "@mui/x-date-pickers": "^8.0.0",
     "@mui/x-tree-view": "^7.28.1",
     "@reduxjs/toolkit": "^2.6.1",
     "@tailwindcss/vite": "^4.0.15",
@@ -26,7 +27,8 @@
     "react-dom": "^19.0.0",
     "react-i18next": "^15.4.1",
     "react-redux": "^9.2.0",
-    "react-router-dom": "^7.4.0"
+    "react-router-dom": "^7.4.0",
+    "recharts": "^2.15.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
